salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CountObsMexcomQuote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CountObsMexcomQuote__c</fullName>
    <label>Total Observacion/Mexcom</label>
    <summaryFilterItems>
        <field>OSFMX_SupplyPointForOffer__c.OSFMX_QuoteStatus__c</field>
        <operation>equals</operation>
        <value>Observaciones</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OSFMX_SupplyPointForOffer__c.OSFMX_QuoteSubStatus__c</field>
        <operation>equals</operation>
        <value>Factibilidad Mexcom</value>
    </summaryFilterItems>
    <summaryForeignKey>OSFMX_SupplyPointForOffer__c.OSFMX_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>