salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CountProcesoProductoQuote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CountProcesoProductoQuote__c</fullName>
    <label>Total Proceso/Producto</label>
    <summaryFilterItems>
        <field>OSFMX_SupplyPointForOffer__c.OSFMX_QuoteStatus__c</field>
        <operation>equals</operation>
        <value>Proceso</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OSFMX_SupplyPointForOffer__c.OSFMX_QuoteSubStatus__c</field>
        <operation>equals</operation>
        <value>Producto</value>
    </summaryFilterItems>
    <summaryForeignKey>OSFMX_SupplyPointForOffer__c.OSFMX_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>