salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CountRechazadaQuotes__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CountRechazadaQuotes__c</fullName>
    <label>Total Rechazadas</label>
    <summaryFilterItems>
        <field>OSFMX_SupplyPointForOffer__c.OSFMX_QuoteStatus__c</field>
        <operation>equals</operation>
        <value>Rechazada</value>
    </summaryFilterItems>
    <summaryForeignKey>OSFMX_SupplyPointForOffer__c.OSFMX_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>