salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CountServicePoint__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CountServicePoint__c</fullName>
    <label>Total Puntos de Suministro</label>
    <summaryForeignKey>OSFMX_SupplyPointForOffer__c.OSFMX_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>