salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CountTotalQuotes__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CountTotalQuotes__c</fullName>
    <description>Conteo total de ofertas</description>
    <label>Total Ofertas</label>
    <summaryForeignKey>OSFMX_SupplyPointForOffer__c.OSFMX_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>