salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CoveredEnergy__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CoveredEnergy__c</fullName>
    <label>Energía cubierta</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>