salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CoveredPower__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CoveredPower__c</fullName>
    <label>Potencia cubierta</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>