salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Cuadro_Autorizacion_Ok__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Cuadro_Autorizacion_Ok__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuadro Autorizacion Ok</label>
    <type>Checkbox</type>
</CustomField>