salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_DailyVolume__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DailyVolume__c</fullName>
    <formula>OSFMX_GJ__c / 365</formula>
    <label>Volumen Diario (Gj/día)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>