salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_DatetimeSend__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DatetimeSend__c</fullName>
    <label>Fecha y hora de envío a gas</label>
    <type>DateTime</type>
</CustomField>