salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_DatetimeSendtoMolecule__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DatetimeSendtoMolecule__c</fullName>
    <label>Fecha y hora de envío a molécula</label>
    <type>DateTime</type>
</CustomField>