salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_DatetimeSendtoTranposrt__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DatetimeSendtoTranposrt__c</fullName>
    <label>Fecha y hora de envío a transporte</label>
    <type>DateTime</type>
</CustomField>