salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_DeclaineDays__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DeclaineDays__c</fullName>
    <label>Días Rechazada</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>