salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_DistributorOrCarrier__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DistributorOrCarrier__c</fullName>
    <label>Distribuidor/Transportista</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OSFMX_ConnectionPipeline__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribución CMG</fullName>
            </value>
            <value>
                <fullName>Distribución NGM</fullName>
            </value>
            <value>
                <fullName>Distribución TMG</fullName>
            </value>
            <value>
                <fullName>Distribución DGJ</fullName>
            </value>
            <value>
                <fullName>Distribución DGQ</fullName>
            </value>
            <value>
                <fullName>Distribución GNP</fullName>
            </value>
            <value>
                <fullName>DGJ-Bajio</fullName>
            </value>
            <value>
                <fullName>Distribución Naturgy Bajio</fullName>
                <label>Naturgy Bajio</label>
            </value>
            <value>
                <fullName>Distribución Naturgy Norte</fullName>
                <label>Naturgy Norte</label>
            </value>
            <value>
                <fullName>Distribución Metrogas</fullName>
                <label>Metrogas</label>
            </value>
            <value>
                <fullName>Distribución Naturgy Toluca</fullName>
                <label>Naturgy Toluca</label>
            </value>
            <value>
                <fullName>Distribución Gas Natural del Noroeste</fullName>
            </value>
            <value>
                <fullName>Usos propios</fullName>
            </value>
            <value>
                <fullName>Gas Natural Comprimido</fullName>
            </value>
            <value>
                <fullName>Transporte Mayakan</fullName>
            </value>
            <value>
                <fullName>Transporte Cenagas</fullName>
            </value>
            <value>
                <fullName>Autotransporte Marabis</fullName>
            </value>
            <value>
                <fullName>Distribución GNP-Mérida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>