salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_EnAprobacion__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EnAprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para estados de procesos de aprobación de presupuestos.</description>
    <label>En Aprobación</label>
    <type>Checkbox</type>
</CustomField>