salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_EndDateSupply__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EndDateSupply__c</fullName>
    <label>Fecha de término del suministro</label>
    <type>Date</type>
</CustomField>