salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_EnergyMEM__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EnergyMEM__c</fullName>
    <label>Energía MEM</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>