salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_FirmBase__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FirmBase__c</fullName>
    <label>% Base firme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>