salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GasMoleculeObservation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GasMoleculeObservation__c</fullName>
    <label>Observaciones compra de energia</label>
    <type>TextArea</type>
</CustomField>