salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GasPipelineConstruction__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GasPipelineConstruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Construcción de gasoducto</label>
    <type>Checkbox</type>
</CustomField>