salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GasQuoteUserComments__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GasQuoteUserComments__c</fullName>
    <label>Comentarios Usuario Oferta Gas</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>