salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GasTransportObservation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GasTransportObservation__c</fullName>
    <label>Observaciones transporte</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>