salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GasTransportPrice__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GasTransportPrice__c</fullName>
    <label>Precio estimado transporte de gas</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>