salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GasUserObservation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GasUserObservation__c</fullName>
    <label>Observaciones usuario oferta de gas</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>