salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GJ__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GJ__c</fullName>
    <label>Consumo en Gj /año</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>