salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_GwhYear__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GwhYear__c</fullName>
    <formula>OSMXConsumo_Plazo__c / 3597</formula>
    <label>GWh/año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>