salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ImpossibleComments__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ImpossibleComments__c</fullName>
    <label>Comentarios Cierre Imposible</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>