salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_IndexReference__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IndexReference__c</fullName>
    <label>Indice de referencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>HSC</fullName>
            </value>
            <value>
                <fullName>WAHA</fullName>
            </value>
            <value>
                <fullName>San J</fullName>
            </value>
            <value>
                <fullName>VPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>