salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_InfrastructureAmount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_InfrastructureAmount__c</fullName>
    <label>Monto de infraestructura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>