salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_InterruptibleBase__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_InterruptibleBase__c</fullName>
    <label>% Base interrumpible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>