salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_KAMComments__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_KAMComments__c</fullName>
    <label>Comentarios de corrección KAM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>