salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_KamSendBack__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_KamSendBack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retorno del KAM</label>
    <type>Checkbox</type>
</CustomField>