salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Last_Modify_By_KAM__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Last_Modify_By_KAM__c</fullName>
    <label>Última modificación por KAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>