salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_LastMOdifyByGasUser__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_LastMOdifyByGasUser__c</fullName>
    <label>Última Modificación Por Usuario Gas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>