salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_LastStatusChange__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_LastStatusChange__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha Ultimo Cambio de Estado</label>
    <type>Date</type>
</CustomField>