salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Latitude__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Latitude__c</fullName>
    <label>Latitud</label>
    <length>12</length>
    <type>Text</type>
</CustomField>