salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Longitude__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Longitude__c</fullName>
    <label>Longitud</label>
    <length>12</length>
    <type>Text</type>
</CustomField>