salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ManagerApproveDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ManagerApproveDate__c</fullName>
    <label>Fecha Aprobación Gerente</label>
    <type>DateTime</type>
</CustomField>