salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Margen_comercializacion_usd__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Margen_comercializacion_usd__c</fullName>
    <label>Margen estimado comercialización usd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>