salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Master_MargenEstimadoMoleculaUSD__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Master_MargenEstimadoMoleculaUSD__c</fullName>
    <label>Margen Estimado Molecula USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>