salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MasterAprueba__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MasterAprueba__c</fullName>
    <label>MasterQuienAprueba</label>
    <length>60</length>
    <type>Text</type>
</CustomField>