salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MasterConsumoPlazoSTR__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MasterConsumoPlazoSTR__c</fullName>
    <label>MasterConsumoPlazoSTR</label>
    <length>15</length>
    <type>Text</type>
</CustomField>