salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MasterCuadrante__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MasterCuadrante__c</fullName>
    <label>MasterCuadrante</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>