salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MasterDailyVolume__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MasterDailyVolume__c</fullName>
    <label>MasterDailyVolume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>