salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MasterGwhYear__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MasterGwhYear__c</fullName>
    <label>MasterGwhYear</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>