salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MasterNivelApro__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MasterNivelApro__c</fullName>
    <label>MasterNivelApro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>