salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MaxComsuption__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MaxComsuption__c</fullName>
    <label>Consumo pico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>