salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Maximumdailycapacity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Maximumdailycapacity__c</fullName>
    <label>Capacidad máxima diaria</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>