salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MeterNotStandarConnection__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MeterNotStandarConnection__c</fullName>
    <label>Metros de Conexión No Estándar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>