salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MoleculeAvailability__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MoleculeAvailability__c</fullName>
    <label>Existe disponibilidad de molécula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>