salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_MoleculeValidation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MoleculeValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación Molécula</label>
    <type>Checkbox</type>
</CustomField>