salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Monto_Rango_Monto__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Monto_Rango_Monto__c</fullName>
    <label>Monto Rango Monto</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>