salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_NombreusuariofertaGas__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NombreusuariofertaGas__c</fullName>
    <description>Guarda nombre de usuario oferta gas cuando se envia aprobación (Proceso Autorización)</description>
    <label>Nombre de usuario oferta Gas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>