salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_NumberFees__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NumberFees__c</fullName>
    <label>Número de Pagos (Conexión)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>