salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ObservationsReviewByGasTransport__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ObservationsReviewByGasTransport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisión - Observaciones Transporte Gas</label>
    <type>Checkbox</type>
</CustomField>