salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OfertDays__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OfertDays__c</fullName>
    <label>Días a la Oferta</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>