salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OfferDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OfferDeliveryDate__c</fullName>
    <label>Fecha de envío de la oferta</label>
    <type>Date</type>
</CustomField>