salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OffersDeadline__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OffersDeadline__c</fullName>
    <label>Vigencia de la oferta (días)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>45 dias</fullName>
                <label>45 días</label>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>