salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OfferSpecifications__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OfferSpecifications__c</fullName>
    <label>Otra vigencia (días)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>