salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OfferSpecificationsComments__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OfferSpecificationsComments__c</fullName>
    <label>Comentarios otra vigencia (días)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>