salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OfferType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OfferType__c</fullName>
    <label>Tipo de oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vinculante</fullName>
            </value>
            <value>
                <fullName>No Vinculante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>