salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OfferValidity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OfferValidity__c</fullName>
    <label>Validez de la Oferta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>