salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OppId__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OppId__c</fullName>
    <label>Identificador de la Oportunidad</label>
    <length>30</length>
    <type>Text</type>
</CustomField>