salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OpportunityType__c</fullName>
    <formula>Opportunity.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de oportunidad</label>
    <type>Text</type>
</CustomField>