salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OppServicePointType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OppServicePointType__c</fullName>
    <description>Muestra si la oportunidad/oferta es punto o multipunto</description>
    <label>Tipo de Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Un punto</fullName>
            </value>
            <value>
                <fullName>Multipunto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>