salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OppSolution__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OppSolution__c</fullName>
    <formula>TEXT(Opportunity.OSFMX_Solution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solución</label>
    <type>Text</type>
</CustomField>