salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OwnCapacity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OwnCapacity__c</fullName>
    <label>¿Tiene capacidad propia?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>