salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_OwnerQuote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OwnerQuote__c</fullName>
    <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario</label>
    <type>Text</type>
</CustomField>