salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ParticularSpecifications__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ParticularSpecifications__c</fullName>
    <label>Específicaciones particulares</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cte nuevo,  sin condicion particular</fullName>
                <label>Cliente nuevo,  sin condicion particular</label>
            </value>
            <value>
                <fullName>Cte nuevo,  con condiciones especiales</fullName>
                <label>Cliente nuevo,  con condiciones especiales</label>
            </value>
            <value>
                <fullName>Cliente Existente, sin condición particular</fullName>
                <label>Cliente existente, sin condición particular</label>
            </value>
            <value>
                <fullName>Cliente Existente, con condiciones Especiales</fullName>
                <label>Cliente existente, con condiciones Especiales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>