salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PaymentDaysAfterInvoiceIssuance__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PaymentDaysAfterInvoiceIssuance__c</fullName>
    <label>Días de pago luego de emisión de factura</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>