salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PowerMEM__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PowerMEM__c</fullName>
    <label>Potencia MEM</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>