salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PresssureMaxOutput__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PresssureMaxOutput__c</fullName>
    <label>Presión de máxima de salida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>