salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PressureMaxIncome__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PressureMaxIncome__c</fullName>
    <label>Presión de máxima de entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>