salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PressureMinAssured__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PressureMinAssured__c</fullName>
    <label>Presión mínima garantizada a la salida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>