salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PriceCELs__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PriceCELs__c</fullName>
    <label>Precio CELs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>