salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PriceEnergy__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PriceEnergy__c</fullName>
    <label>Precio de energía</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>