salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PricePower__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PricePower__c</fullName>
    <label>Precio de potencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>