salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_PriceStructure__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PriceStructure__c</fullName>
    <label>Estructura de precio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Volumétrico</fullName>
            </value>
            <value>
                <fullName>Firme/Interrumpible</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>