salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ProbableServiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ProbableServiceStartDate__c</fullName>
    <label>Fecha probable inicio de servicio</label>
    <type>Date</type>
</CustomField>