salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ProductDescription__c</fullName>
    <label>Descripción del producto "Otro"</label>
    <length>255</length>
    <type>Text</type>
</CustomField>