salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Quadrant__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Quadrant__c</fullName>
    <label>Cuadrante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>