salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_QuantityCELs__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_QuantityCELs__c</fullName>
    <label>Cantidad CELs</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>