salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_QuotCreation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_QuotCreation__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha de Creación</label>
    <type>Date</type>
</CustomField>